reign_derive/tests/ui/compile_fail/model_identifiable.stderr
error[E0599]: no method named `id` found for struct `UserName` in the current scope
  --> $DIR/model_identifiable.rs:22:52
   |
12 | #[derive(Debug, Model)]
   |                 ----- method `id` not found for this
...
22 |     UserName::one().load().await.unwrap().unwrap().id();
   |                                                    ^^ method not found in `UserName`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `id`, perhaps you need to implement it:
           candidate #1: `diesel::Identifiable`
